# dwpy

./: LICENSE  README.md  pyproject.toml
data/: example  example_preview
examples/: example.py  example_steps.py  example_utils.py
pipelyne/: base_step.py  context.py  pipelyne.py  utils.py
src/: __init__.py  preproc.py  test.py  utils.py
src/steps/: __init__.py  base_step.py  first_step.py
tuyau/: base_step.py  context.py  exceptions.py  pipeline.py  utils.py
tuyau/steps/: __init__.py  base_step.py  steps.py
tuyaux/: __init__.py  context.py  exceptions.py  pipeline.py  utils.py
tuyaux/steps/: __init__.py  base_step.py  steps.py
